@@ -1,4 +1,4 @@
-# $Id: srclist.txt,v 1.16 2004/04/19 13:48:19 karl Exp $
+# $Id: srclist.txt,v 1.17 2004/09/14 12:36:00 karl Exp $
 # Files which we keep in sync from other places.
 # This is input for the script config/srclist-update in the gnulib
 # project on savannah.
@@ -79,7 +79,7 @@ $GNULIBSRC/doc/fdl.texi		doc
 #
 $GNULIBSRC/lib/alloca.c		lib
 $GNULIBSRC/lib/getopt.c		lib
-$GNULIBSRC/lib/getopt.h		lib
+$GNULIBSRC/lib/getopt_.h	lib
 $GNULIBSRC/lib/getopt1.c	lib
 $GNULIBSRC/lib/gettext.h	lib
 $GNULIBSRC/lib/memcpy.c		lib
